--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,5 @@
 :root {
-  --title-color: #d97d83;
+  --title-color: #696969;
 }
 * {
   font-family: "Noto Serif KR", serif, -apple-system, BlinkMacSystemFont,
